--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">迅捷开发框架</string>
 
     <string name="activity_recyclerview_info">点击底部按钮,改变数据.</string>
+    <string name="introduce_app">ARDF是一个帮助开发者快速构建项目的基础框架,提供了丰富的可拓展的基础功能,简单配置即可开始业务开发.\n\nGitHub\nhttps://github.com/ftmtshuashua/ARDF</string>
 </resources>
